<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.weather.WeatherActivity"
    tools:showIn="@layout/activity_weather">

    <TextView
        android:id="@+id/tvCurrentTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/current_temp" />

    <TextView
        android:id="@+id/tvMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tvCurrentTemp"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentTemp"
        tools:text="@string/min_temp" />

    <TextView
        android:id="@+id/tvMaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tvCurrentTemp"
        app:layout_constraintTop_toBottomOf="@id/tvMinTemp"
        tools:text="@string/max_temp" />

    <TextView
        android:id="@+id/tvWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/tvCurrentTemp"
        app:layout_constraintTop_toBottomOf="@id/tvMaxTemp"
        tools:text="@string/wind_speed" />

    <TextView
        android:id="@+id/tvWindDeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tvCurrentTemp"
        app:layout_constraintTop_toBottomOf="@id/tvWindSpeed"
        tools:text="@string/wind_deg" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tvCurrentTemp"
        app:layout_constraintTop_toBottomOf="@id/tvWindDeg"
        tools:text="@string/date" />

    <TextView
        android:id="@+id/tvCityId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/tvCurrentTemp"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        tools:text="@string/city_id" />

</androidx.constraintlayout.widget.ConstraintLayout>